# pico-pic

./: CMakeLists.txt  blink.c  image_info.c  image_info.h
bootloader/: CMakeLists.txt  cmake_install.cmake  gen_imghdr.py  main.c
